Update styles.css to fix gradient cutoff

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* css styles */
 body {
   min-height: 100vh;
+  background-attachment: fixed;
 }
